--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tepav">
-        <activity android:name=".ui.LoginActivity"></activity>
+        <activity android:name=".ui.PacketActivity"></activity>
+        <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.DeviceActivity" />
         <activity android:name=".ui.HomeActivity" />
         <activity android:name=".MainActivity">
