--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="id.co.gradien.tepav">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tepav">
-        <activity android:name=".ui.StatusPacketActivity"></activity>
+        <activity android:name=".ui.StatusPacketActivity" />
         <activity android:name=".ui.PacketActivity" />
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.DeviceActivity" />
