--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,12 @@ dependencies {
 
     // TimelineView
     implementation 'com.github.vipulasri:timelineview:1.1.5'
+
+    // Scan barcode
+    implementation("me.dm7.barcodescanner:zxing:1.9.8") {
+        exclude group: "com.android.support"
+    }
+
+    // Sweet Alert
+    implementation "com.github.f0ris.sweetalert:library:1.6.2"
 }
