--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:name=".app.MainApp"
@@ -15,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tepav">
-        <activity android:name=".ui.ScanDeviceActivity"></activity>
+        <activity android:name=".ui.BluetoothActivity"></activity>
+        <activity android:name=".ui.ScanDeviceActivity" />
         <activity android:name=".ui.StatusPacketActivity" />
         <activity android:name=".ui.PacketActivity" />
         <activity android:name=".ui.LoginActivity" />
