--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tepav">
-        <activity android:name=".ui.SettingActivity"></activity>
+        <activity android:name=".ui.SettingActivity" />
         <activity android:name=".ui.BluetoothActivity" />
         <activity android:name=".ui.ScanDeviceActivity" />
         <activity android:name=".ui.StatusPacketActivity" />
